--- a/src/main/resources/templates/admin/welcome.html
+++ b/src/main/resources/templates/admin/welcome.html
@@ -5,7 +5,11 @@
 <body>
 <div class="page-container">
 	<p class="f-20 text-success">Welcome to Smart Parking Management System<span class="f-14">v1.0</span></p>
-
+	<table class="table table-border table-bordered table-bg mt-20">
+		<thead>
+		<tr>
+			<th colspan="2" scope="col">Server Information</th>
+		</tr>
 				<td>Server Port </td>
 				<td th:text="${localPort}"></td>
 			</tr>
