--- a/src/main/templates/notice/notice-list.html
+++ b/src/main/templates/notice/notice-list.html
@@ -1,10 +1,87 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+<!DOCTYPE HTML>
+<html lang="zh-CN" xmlns:th="http://www.thymeleaf.org">
+<head th:include="/common/head :: commonHead('List of announcements')">
 </head>
 <body>
+<nav class="breadcrumb"><i class="Hui-iconfont">&#xe67f;</i> Home <span class="c-gray en">&gt;</span> Announcements Management <span class="c-gray en">&gt;</span> Announcement List
+    <a class="btn btn-success radius r" style="line-height:1.6em;margin-top:3px" href="javascript:location.replace(location.href);" title="Refresh" ><i id="shuaxin" class="Hui-iconfont">&#xe68f;</i></a></nav>
+<div class="page-container">
+    <div class="text-c">
+        <form action="/admin/findNoticeByTitle">
+            <input type="text" th:value="${titleTmp}" class="input-text" style="width:250px" placeholder="Enter a title" id="" name="titleTmp" />
+            <button type="submit" class="btn btn-success" id="" name=""><i class="Hui-iconfont">&#xe665;</i> Search Announcement</button>
+        </form>
+    </div>
+    <div class="cl pd-5 bg-1 bk-gray mt-20"> <span class="l">
+	<a href="javascript:;" onclick="notice_add('Add Announcements','/admin/notice-add','800','300')" class="btn btn-primary radius"><i class="Hui-iconfont">&#xe600;</i> Add Announcement</a></span><span class="r">Total data：<strong th:text="${noticeNum}"></strong></span> </div>
+    <table class="table table-border table-bordered table-bg">
+        <thead>
+        <tr>
+            <th scope="col" colspan="9">Announcement List</th>
+        </tr>
+        <tr class="text-c">
+            <th width="45">Serial number</th>
+            <th width="150">Title</th>
+            <th width="150">Content</th>
+            <th width="100">Creation time</th>
+            <th width="100">Created by</th>
+            <th width="100">Operation</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr class="text-c" th:each="notice,noticeStat : ${noticeList}">
+            <td>
+                <span th:text="${noticeStat.index+1}"></span>
+                <input type="hidden" th:value="${notice.id}" class="inp"/>
+            </td>
+            <td th:text="${notice.title}"></td>
+            <td th:text="${notice.content}"></td>
+            <td th:text="${#calendars.format(notice.createDate,'yyyy-MM-dd')}"></td>
+            <td th:text="${notice.admin_name}"></td>
+            <td class="td-manage">
+                <a style="text-decoration:none" class="ml-5" onClick="notice_edit(this,'Announcement Editor','/admin/notice-edit','800','300')" href="javascript:;" title="Editor">
+                    <i class="Hui-iconfont">&#xe6df;</i></a>
+                <a title="Delete" href="javascript:;" onclick="notice_del(this)"
+                   class="ml-5" style="text-decoration:none"><i class="Hui-iconfont">&#xe6e2;</i></a>
+            </td>
+        </tr>
+        </tbody>
+    </table>
+</div>
 
+<!-- 引入公共js -->
+<span th:include="/common/on-load-js :: commonOnLoadJs"></span>
+<!--请在下方写此页面业务相关的脚本-->
+<script type="text/javascript">
+    function notice_add(title,url,w,h){
+        layer_show(title,url,w,h);
+    }
+
+    function notice_edit(obj,title,url,w,h){
+        var noticeId = $(obj).parents("tr").find(".inp").val();
+        var urltmp = url+"?noticeId="+noticeId;
+        layer_show(title,urltmp,w,h);
+    }
+
+    function notice_del(obj){
+        layer.confirm('Confirm to delete?',function(index){
+            var noticeId = $(obj).parents("tr").find(".inp").val();
+            $.ajax({
+                type: 'POST',
+                url: '/admin/delNotice',
+                data:{"noticeId":noticeId},
+                dataType: 'json',
+                success: function(data){
+                    if(data.res==0){
+                        $(obj).parents("tr").remove();
+                        layer.msg('Deleted!',{icon:1,time:1000});
+                    }else{
+                        layer.msg('Operation failed!',{icon: 2,time:1000});
+                    }
+                }
+            });
+        });
+    }
+</script>
 </body>
 </html>
