--- a/src/main/resources/templates/admin/admin-list.html
+++ b/src/main/resources/templates/admin/admin-list.html
@@ -55,7 +55,7 @@
 	url		请求的url
 	id		需要操作的数据id
 	w		弹出层宽度（缺省调默认值）
-	h		弹出层高度（缺省调默认值）
+	h		弹出层高度（缺省调默认值）666
 */
 /*管理员-增加*/
 function admin_add(title,url,w,h){
